jACBrFramework/ACBrFramework_JNI/include/ACBrTEF.h

#define ACBr

typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;
#define DllImport extern "C"
#define DllImport extern


// Tipos de dados

typedef void (*AguardaRespCallback) (PCHAR Arquivo,int SegundosTimeOut,BOOL *Interromper);


typedef void (*AntesCancelarTransacaoCallback) (INTPTR RespostaPendente);


typedef void (*AntesFinalizarRequisicaoCallback) (INTPTR Req);


typedef void (*BloqueiaMouseTecladoCallback) (BOOL Bloqueia,BOOL *Tratado);


typedef void (*ComandaECFAbreVinculadoCallback) (PCHAR COO,PCHAR IndiceECF,double Valor,RetornoECF *RetornoECF);


typedef void (*ComandaECFCallback) (ACBrTEFDOperacaoECF Operacao,INTPTR Resp,RetornoECF *RetornoECF);


typedef void (*ComandaECFImprimeViaCallback) (ACBrTEFDTipoRelatorio TipoRelatorio,int Via,INTPTR ImagemComprovante,int ImagemComprovanteCount,RetornoECF *RetornoECF);


typedef void (*ComandaECFPagamentoCallback) (PCHAR IndiceECF,double Valor,RetornoECF *RetornoECF);


typedef void (*ComandaECFSubtotalizaCallback) (double DescAcre,RetornoECF *RetornoECF);


typedef void (*DepoisCancelarTransacoesCallback) (INTPTR RespostasPendentes);


typedef void (*DepoisConfirmarTransacoesCallback) (INTPTR RespostasPendentes);


typedef void (*ExecutaAcaoCallback) (BOOL *Tratado);


typedef void (*ExibeMsgCallback) (ACBrTEFDOperacaoMensagem Operacao,PCHAR Mensagem,ModalResult *AModalResult);


typedef void (*InfoECFCallback) (ACBrTEFDInfoECF Operacao,PCHAR RetornoECF,int RetornoECFLen);


typedef void (*MudaEstadoReqCallback) (ACBrTEFDReqEstado EstadoReq);


typedef void (*MudaEstadoRespCallback) (ACBrTEFDRespEstado EstadoResp);


typedef void (*TEFCliSiTefExibeMenuCallback) (PCHAR Titulo,INTPTR Opcoes,int OpcoesCount,int *ItemSelecionado,BOOL *VoltarMenu);


typedef void (*TEFCliSiTefObtemCampoCalback) (PCHAR Titulo,int TamanhoMinimo,int TamanhoMaximo,int TipoCampo,ACBrTEFDCliSiTefOperacaoCampo Operacao,PCHAR Resposta,int RespLen,BOOL *Digitado,BOOL *VoltarMenu);

DllImport int TEF_Create(INTPTR* tefHandle);

DllImport int TEF_CRT(const INTPTR tefHandle, const double Valor, const PCHAR IndiceFPG_ECF, const PCHAR DocumentoVinculado, const int Moeda);

DllImport int TEF_Destroy(INTPTR* tefHandle);

DllImport int TEF_GetGPAtual(const INTPTR tefHandle);

DllImport int TEF_GetUltimoErro(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_Identificacao_GetNomeAplicacao(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_Identificacao_GetRazaoSocial(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_Identificacao_GetSoftwareHouse(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_Identificacao_GetVersaoAplicacao(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_Identificacao_SetNomeAplicacao(const INTPTR tefHandle, const PCHAR NomeAplicacao);

DllImport int TEF_Identificacao_SetRazaoSocial(const INTPTR tefHandle, const PCHAR RazaoSocial);

DllImport int TEF_Identificacao_SetSoftwareHouse(const INTPTR tefHandle, const PCHAR SoftwareHouse);

DllImport int TEF_Identificacao_SetVersaoAplicacao(const INTPTR tefHandle, const PCHAR VersaoAplicacao);

DllImport int TEF_Inicializar(const INTPTR tefHandle, const int gp);

DllImport int TEF_SetGPAtual(const INTPTR tefHandle, const int gp);

DllImport int TEF_TEFCliSiTef_GetCodigoLoja(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFCliSiTef_GetEnderecoIP(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFCliSiTef_GetNumeroTerminal(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFCliSiTef_GetOperacaoADM(const INTPTR tefHandle);

DllImport int TEF_TEFCliSiTef_GetOperacaoATV(const INTPTR tefHandle);

DllImport int TEF_TEFCliSiTef_GetOperacaoCHQ(const INTPTR tefHandle);

DllImport int TEF_TEFCliSiTef_GetOperacaoCNC(const INTPTR tefHandle);

DllImport int TEF_TEFCliSiTef_GetOperacaoCRT(const INTPTR tefHandle);

DllImport int TEF_TEFCliSiTef_GetOperacaoReImpressao(const INTPTR tefHandle);

DllImport int TEF_TEFCliSiTef_GetOperador(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFCliSiTef_GetRestricoes(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFCliSiTef_SetCodigoLoja(const INTPTR tefHandle, const PCHAR CodigoLoja);

DllImport int TEF_TEFCliSiTef_SetEnderecoIP(const INTPTR tefHandle, const PCHAR EnderecoIP);

DllImport int TEF_TEFCliSiTef_SetNumeroTerminal(const INTPTR tefHandle, const PCHAR NumeroTerminal);

DllImport int TEF_TEFCliSiTef_SetOnExibeMenu(const INTPTR tefHandle, const TEFCliSiTefExibeMenuCallback method);

DllImport int TEF_TEFCliSiTef_SetOnObtemCampo(const INTPTR tefHandle, const TEFCliSiTefObtemCampoCalback method);

DllImport int TEF_TEFCliSiTef_SetOperacaoADM(const INTPTR tefHandle, const int OperacaoADM);

DllImport int TEF_TEFCliSiTef_SetOperacaoATV(const INTPTR tefHandle, const int OperacaoATV);

DllImport int TEF_TEFCliSiTef_SetOperacaoCHQ(const INTPTR tefHandle, const int OperacaoCHQ);

DllImport int TEF_TEFCliSiTef_SetOperacaoCNC(const INTPTR tefHandle, const int OperacaoCNC);

DllImport int TEF_TEFCliSiTef_SetOperacaoCRT(const INTPTR tefHandle, const int OperacaoCRT);

DllImport int TEF_TEFCliSiTef_SetOperacaoReImpressao(const INTPTR tefHandle, const int OperacaoReImpressao);

DllImport int TEF_TEFCliSiTef_SetOperador(const INTPTR tefHandle, const PCHAR Operador);

DllImport int TEF_TEFCliSiTef_SetRestricoes(const INTPTR tefHandle, const PCHAR Restricoes);

DllImport int TEF_TEFDial_GetArqReq(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFDial_GetArqSTS(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFDial_GetArqTemp(const INTPTR tefHandle, PCHAR buffer, const int bufferLen);

DllImport int TEF_TEFDial_GetAutoAtivarGP(const INTPTR tefHandle);

DllImport int TEF_TEFDial_GetEsperaSTS(const INTPTR tefHandle);

DllImport int TEF_TEFDial_GetNumVias(const INTPTR tefHandle);

DllImport int TEF_TEFDial_SetArqReq(const INTPTR tefHandle, const PCHAR ArqReq);

DllImport int TEF_TEFDial_SetArqSTS(const INTPTR tefHandle, const PCHAR ArqSTS);

DllImport int TEF_TEFDial_SetArqTemp(const INTPTR tefHandle, const PCHAR ArqTemp);

DllImport int TEF_TEFDial_SetAutoAtivarGP(const INTPTR tefHandle, const BOOL AutoAtivarGP);

DllImport int TEF_TEFDial_SetEsperaSTS(const INTPTR tefHandle, const int EsperaSTS);

DllImport int TEF_TEFDial_SetNumVias(const INTPTR tefHandle, const int NumVias);