ACBrFramework.Net/ACBrFramework.Net/TEFD/ACBrTEFInterop.cs

using System;
using System.Runtime.InteropServices;
using System.Text;

namespace ACBrFramework.TEFD
{
	public static class ACBrTEFInterop
	{
		#region DLL

#if x86
		private const string ACBr = "ACBrFramework32.dll";
#elif x64
				private const string ACBr = "ACBrFramework64.dll";
#endif

		#endregion DLL

		#region InteropTypes

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		public delegate void AguardaRespCallback(string Arquivo, int SegundosTimeOut, ref bool Interromper);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		public delegate void ExibeMsgCallback(ACBrTEFDOperacaoMensagem Operacao, string Mensagem, ref ModalResult AModalResult);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		public delegate void BloqueiaMouseTecladoCallback(bool Bloqueia, ref bool Tratado);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		public delegate void ExecutaAcaoCallback(ref bool Tratado);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		public delegate void ComandaECFCallback(ACBrTEFDOperacaoECF Operacao, IntPtr Resp, ref RetornoECF RetornoECF);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		public delegate void ComandaECFSubtotalizaCallback(double DescAcre, ref RetornoECF RetornoECF);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		public delegate void ComandaECFPagamentoCallback(string IndiceECF, double Valor, ref RetornoECF RetornoECF);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		public delegate void ComandaECFAbreVinculadoCallback(string COO, string IndiceECF, double Valor, ref RetornoECF RetornoECF);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		public delegate void ComandaECFImprimeViaCallback(ACBrTEFDTipoRelatorio TipoRelatorio, int Via, IntPtr ImagemComprovante, int ImagemComprovanteCount, ref RetornoECF RetornoECF);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		public delegate void InfoECFCallback(ACBrTEFDInfoECF Operacao, StringBuilder RetornoECF, int RetornoECFLen);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		public delegate void AntesFinalizarRequisicaoCallback(IntPtr Req);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		public delegate void DepoisConfirmarTransacoesCallback(IntPtr RespostasPendentes);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		public delegate void AntesCancelarTransacaoCallback(IntPtr RespostaPendente);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		public delegate void DepoisCancelarTransacoesCallback(IntPtr RespostasPendentes);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		public delegate void MudaEstadoReqCallback(ACBrTEFDReqEstado EstadoReq);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		public delegate void MudaEstadoRespCallback(ACBrTEFDRespEstado EstadoResp);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		public delegate void TEFCliSiTefExibeMenuCallback(string Titulo, IntPtr Opcoes, int OpcoesCount, ref int ItemSelecionado, ref bool VoltarMenu);

		[UnmanagedFunctionPointer(CallingConvention.Cdecl)]
		public delegate void TEFCliSiTefObtemCampoCalback(string Titulo, int TamanhoMinimo, int TamanhoMaximo, int TipoCampo, ACBrTEFDCliSiTefOperacaoCampo Operacao, StringBuilder Resposta, int RespLen, ref bool Digitado, ref bool VoltarMenu);

		#endregion InteropTypes

		#region Methods

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_Create(ref IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_Destroy(ref IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_GetUltimoErro(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_Inicializar(IntPtr tefHandle, int gp);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_CRT(IntPtr tefHandle, double Valor, string IndiceFPG_ECF, string DocumentoVinculado, int Moeda);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_GetGPAtual(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_SetGPAtual(IntPtr tefHandle, int gp);

		#region Identificacao

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_Identificacao_GetNomeAplicacao(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_Identificacao_SetNomeAplicacao(IntPtr tefHandle, String NomeAplicacao);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_Identificacao_GetVersaoAplicacao(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_Identificacao_SetVersaoAplicacao(IntPtr tefHandle, String VersaoAplicacao);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_Identificacao_GetSoftwareHouse(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_Identificacao_SetSoftwareHouse(IntPtr tefHandle, String SoftwareHouse);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_Identificacao_GetRazaoSocial(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_Identificacao_SetRazaoSocial(IntPtr tefHandle, String RazaoSocial);

		#endregion Identificacao

		#region TEFCliSiTef

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFCliSiTef_GetEnderecoIP(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFCliSiTef_SetEnderecoIP(IntPtr tefHandle, String EnderecoIP);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFCliSiTef_GetCodigoLoja(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFCliSiTef_SetCodigoLoja(IntPtr tefHandle, String CodigoLoja);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFCliSiTef_GetNumeroTerminal(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFCliSiTef_SetNumeroTerminal(IntPtr tefHandle, String NumeroTerminal);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFCliSiTef_GetOperador(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFCliSiTef_SetOperador(IntPtr tefHandle, String Operador);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFCliSiTef_GetRestricoes(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFCliSiTef_SetRestricoes(IntPtr tefHandle, String Restricoes);

		//Function TEF_TEFCliSiTef_GetParametrosAdicionais
		//Function TEF_TEFCliSiTef_SetParametrosAdicionais

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFCliSiTef_GetOperacaoATV(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFCliSiTef_SetOperacaoATV(IntPtr tefHandle, int OperacaoATV);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFCliSiTef_GetOperacaoADM(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFCliSiTef_SetOperacaoADM(IntPtr tefHandle, int OperacaoADM);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFCliSiTef_GetOperacaoCRT(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFCliSiTef_SetOperacaoCRT(IntPtr tefHandle, int OperacaoCRT);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFCliSiTef_GetOperacaoCHQ(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFCliSiTef_SetOperacaoCHQ(IntPtr tefHandle, int OperacaoCHQ);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFCliSiTef_GetOperacaoCNC(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFCliSiTef_SetOperacaoCNC(IntPtr tefHandle, int OperacaoCNC);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFCliSiTef_GetOperacaoReImpressao(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFCliSiTef_SetOperacaoReImpressao(IntPtr tefHandle, int OperacaoReImpressao);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFCliSiTef_SetOnExibeMenu(IntPtr tefHandle, TEFCliSiTefExibeMenuCallback method);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFCliSiTef_SetOnObtemCampo(IntPtr tefHandle, TEFCliSiTefObtemCampoCalback method);

		#endregion TEFCliSiTef

		#region TEFDial

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDial_GetAutoAtivarGP(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDial_SetAutoAtivarGP(IntPtr tefHandle, bool AutoAtivarGP);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDial_GetNumVias(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDial_SetNumVias(IntPtr tefHandle, int NumVias);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDial_GetEsperaSTS(IntPtr tefHandle);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDial_SetEsperaSTS(IntPtr tefHandle, int EsperaSTS);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDial_GetArqTemp(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDial_SetArqTemp(IntPtr tefHandle, String ArqTemp);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDial_GetArqReq(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDial_SetArqReq(IntPtr tefHandle, String ArqReq);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDial_GetArqSTS(IntPtr tefHandle, StringBuilder buffer, int bufferLen);

		[DllImport(ACBr, CallingConvention = CallingConvention.Cdecl)]
		public static extern int TEF_TEFDial_SetArqSTS(IntPtr tefHandle, String ArqSTS);
